corpus/call_tests.txt
=====================
Call Test
=====================

call identifier {

    input:
      gatk="/net/gatk/",
      bam=output.bam_file
}
---

(definition
        (call 
          (namespaced_identifier (identifier))
              (call_body
                (inputs
                    (variable_mappings
                            (variable_mapping_kv (identifier)
                                (expression (string_literal)))
                            (variable_mapping_kv (identifier)
                                (expression (expression (identifier))
                                  (expression (identifier)))))))))
