corpus/expression_tests.txt
==================
Multiplication and Addition Precedence
==================

1+2*2

---

(definition (expression (math_expression
            (expression (integer))
                    (expression (math_expression
                            (expression (integer)) (expression (integer)))))))


==================
Unary Expression
==================

+1-2

---
(definition (expression (math_expression
          (expression (math_expression
          (expression (integer)))) (expression (integer)))))


==================
Equality
==================

3 == 2

---

(definition
        (expression (equality_expression
                                (expression (integer))
                                (expression (integer))))
)

==================
Relational Expression
==================
3 > 2
---
(definition (expression relational_expression((expression (integer)) (expression (integer)))))

==================
Complex Equality
==================

1 + 3 == 2

---

(definition
        (expression
              (equality_expression
                            (expression (math_expression
                                          (expression (integer))
                                          (expression (integer))))
                            (expression (integer))
              )
        )
)


==================
If Then Expression
==================

if 1 + 3 == 2 then "Day" else "Morning"

---

(definition (expression (expression
          (equality_expression
              (expression (math_expression
              (expression (integer)) (expression (integer))
              ))
            (expression (integer)))
          )

        (expression (string_literal)) (expression (string_literal))
        ))

==================
Empty Dictionary
==================
{ }
---
(definition (expression (dictionary_expression )))

==================
Dictionary w/ values
==================
{1: "3", 2: "5"}
---
(definition
    (expression
       (dictionary_expression
          (expression (integer)) (expression (string_literal))
          (expression (integer)) (expression (string_literal))
      )
    )
)

==================
String - Double Quotes
==================
"Hi, how are you?"
---
(definition (expression (string_literal)))

==================
String with dash - Double Quotes
==================

"f-fefe--f"
---
(definition (expression (string_literal)))

==================
String - Single Quote
==================
'Hi, how are you?'
---
(definition (expression (string_literal)))

==================
String with dash - Single Quote
==================

'f-fefe--f'
---
(definition (expression (string_literal)))
